# good-voxel

./: Cargo.toml  cargo-flamegraph.stacks
src/: block.rs  camera.rs  chunk.rs  collisions.rs  lib.rs  main.rs  model.rs  shader.wgsl  tempCodeRunnerFile.rs  texture.rs  unused_old_code.txt  world.rs
src/terrain/: height_map.rs
